# IQ

./: CMakeLists.txt
src/algorithms/: sort.h
src/data_structures/: list.h
src/random/: alg_random.h  lcg.cpp  lcg.h  randomize.h
tests/: CMakeLists.txt
tests/algorithms/: sort_test.cpp
tests/random/: lcg_test.cpp
